--- a/Smiley Face (Animation)/Smiley-Face.css
+++ b/Smiley Face (Animation)/Smiley-Face.css
@@ -59,7 +59,6 @@ body {
     margin: 0 15px;
     border-radius: 50%;
 }
-
 .eyes .eye::before {
     content: '';
     position: absolute;
@@ -70,3 +69,4 @@ body {
     height: 40px;
     background: #000;
     border-radius: 50%;
+}
