--- a/Cards - 3D/Cards 01/Card.css
+++ b/Cards - 3D/Cards 01/Card.css
@@ -1,7 +1,8 @@
 :root {
-    --card-height: 60vh;
+    --card-height: 30vh;
     --card-width: calc(var(--card-height) / 1.5);
 }
+
 body {
     width: 100vw;
     height: 100vh;
@@ -10,44 +11,61 @@ body {
     justify-content: center;
     align-items: center;
     background-color: #191c29;
+    filter: brightness(1.4) contrast(1.1);
 }
+
 .main-content {
-    height: 75vh;
+    height: 85vh;
     /* width: 32vw; */
-    padding: 0 10vh;
+    padding: 0 15vh;
     /* border-radius: 5vh; */
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 2vh 7vh;
-    
+    margin: 0 5vh;
+    filter: brightness(1.2) contrast(1.1) saturate(0.9);
+
+    transform-style: preserve-3d;
     perspective: 1000px;
 }
 
 .main-content:hover {
     border: 1px double white;
     background-color: rgba(249, 249, 249, 0.043);
-    
+
 }
 
 .card {
     width: var(--card-width);
     height: var(--card-height);
     position: relative;
+    right: 5vh;
     display: flex;
+    /* justify-content: center; */
     align-items: center;
     padding: 0px 36px;
     perspective: 2500px;
     /* margin: 0px 8vw; */
     cursor: pointer;
+    transform: perspective(1000px);
+
+    transform: translateZ(30px);
+
+}
+
+.main-content:hover {
+    filter: brightness(1.2) saturate(1.5);
 }
 
 .cover-image {
     width: 100%;
     height: 100%;
+    object-fit: cover;
+    object-position: center;
 }
+
 .wrapper {
-    transition: all 1s ease-out;
+    transition: all 0.5s ease-out;
     position: absolute;
     width: 100%;
     z-index: -1;
@@ -58,7 +76,14 @@ body {
     transition: transform 0.5s;
     filter: brightness(1) contrast(1.5);
     position: relative;
+    top: 50%;
     right: -20%;
+}
+
+.main-content:hover .title {
+    transform: translate3d(-50%, -8%, 500px);
+    width: 110%;
+    filter: brightness(1.3) contrast(1.5) hue-rotate(280deg);
 }
 
 .character {
@@ -68,4 +93,24 @@ body {
     position: absolute;
     top: -8vh;
     right: -20vh;
+    transform: rotateX(0deg) rotateY(0deg) translateZ(0);
+    filter: saturate(0.8) contrast(1.15);
+}
+
+.main-content:hover .wrapper {
+    transform: rotateX(0deg) rotateY(-180deg) translateZ(0);
+    box-shadow: 0px -4px 11px 3px rgba(255, 255, 255, 0.4);
+    opacity: 0.6;
+    transition: 0.5s ease-out;
+}
+
+.main-content:hover .character {
+    opacity: 1;
+    transform: translate3d(0%, -90%, -100%);
+    transition: 0.8s;
+    transition-delay: -0.2s;
+    background-color: rgba(148, 147, 147, 0.005);
+    transform: translateZ(50px);
+    right: 0vh;
+
 }
